parse-display/tests/compile_fail/display/struct_empty_field_ident.stderr
error: {} is not allowed in struct format.
 --> tests/compile_fail/display/struct_empty_field_ident.rs:4:11
  |
4 | #[display("{}")]
  |           ^^^^
